[gd_scene load_steps=5 format=3 uid="uid://dwvpmrxn72f12"]

[ext_resource type="Script" uid="uid://brewswukpa2nj" path="res://bullet_and_reload/player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://dyuhol6yekjb5" path="res://assets/top_down_shooter/Skins.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://d2qalmptgd70m" path="res://assets/top_down_shooter/Weapons.png" id="3_i3pqv"]
[ext_resource type="PackedScene" uid="uid://bxhts4e8tj2ua" path="res://bullet_and_reload/bullet_ammo_display.tscn" id="4_hqtel"]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_4flbx")

[node name="rotationNode" type="Node2D" parent="."]

[node name="Head" type="Sprite2D" parent="rotationNode"]
z_index = 1
rotation = -1.5708
texture = ExtResource("2_onrkg")
region_enabled = true
region_rect = Rect2(1181, 111, 172, 196)

[node name="Backback" type="Sprite2D" parent="rotationNode"]
position = Vector2(-108, 4)
rotation = -1.5708
texture = ExtResource("2_onrkg")
region_enabled = true
region_rect = Rect2(960, 129, 213, 154)

[node name="Arms" type="Sprite2D" parent="rotationNode"]
position = Vector2(24, 72)
rotation = -1.5708
texture = ExtResource("2_onrkg")
region_enabled = true
region_rect = Rect2(1405, 113, 140, 270)

[node name="Arms2" type="Sprite2D" parent="rotationNode"]
position = Vector2(40, -76)
rotation = -1.5708
texture = ExtResource("2_onrkg")
region_enabled = true
region_rect = Rect2(1588, 113, 168, 293)

[node name="Weapon" type="Sprite2D" parent="rotationNode"]
position = Vector2(124, 8)
rotation = -1.5708
texture = ExtResource("3_i3pqv")
region_enabled = true
region_rect = Rect2(1103, 431, 87, 396)

[node name="BulletSpawnMarker" type="Marker2D" parent="rotationNode"]
unique_name_in_owner = true
position = Vector2(320, 8)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bulletAmmoDisplay" parent="CanvasLayer" instance=ExtResource("4_hqtel")]
